--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroui/react": "^2.8.7",
     "framer-motion": "^12.27.2",
     "graphql": "^16.12.0",
+    "graphql-ws": "^6.0.6",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
