--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.31",
     "apollo-server": "^3.13.0",
     "express": "^4.22.1",
     "graphql": "^16.12.0",
     "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.6",
+    "uuid": "^13.0.0",
     "ws": "^8.19.0"
   }
 }
